--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -2,7 +2,7 @@
   <div class="col-md-6 m-auto">
     <div class="card card-body">
       <h1 class="text-center mb-3"><i class="fas fa-user-plus"></i> Sign Up</h1>
-      
+      <% include ./partials/messages %>
       <form action="/users/signup" method="POST">
         <div class="form-group">
           <label for="name">Name</label>
@@ -48,7 +48,7 @@
             value="<%= typeof email != 'undefined' ? password2 : '' %>"
           />
         </div>
-        <button type="submit" class="btn btn-primary btn-block">Register</button>
+        <button type="submit" class="btn btn-primary btn-block">Sign Up</button>
       </form>
       <p class="lead mt-4">Have An Account? <a href="/users/login">Login</a></p>
     </div>
