Add GET and POST /users/login

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -13,6 +13,7 @@
             class="form-control"
             placeholder="Enter Name"
             value="<%= typeof name != 'undefined' ? name : '' %>"
+            required
           />
         </div>
         <div class="form-group">
@@ -24,6 +25,7 @@
             class="form-control"
             placeholder="Enter Email"
             value="<%= typeof email != 'undefined' ? email : '' %>"
+            required
           />
         </div>
         <div class="form-group">
@@ -35,6 +37,7 @@
             class="form-control"
             placeholder="Create Password"
             value="<%= typeof email != 'undefined' ? password : '' %>"
+            required
           />
         </div>
         <div class="form-group">
@@ -46,6 +49,7 @@
             class="form-control"
             placeholder="Confirm Password"
             value="<%= typeof email != 'undefined' ? password2 : '' %>"
+            required
           />
         </div>
         <button type="submit" class="btn btn-primary btn-block">Sign Up</button>
